--- a/rest-api-with-swagger/package.json
+++ b/rest-api-with-swagger/package.json
@@ -54,6 +54,9 @@
     "tsconfig-paths": "4.0.0",
     "typescript": "^4.3.5"
   },
+  "engines": {
+    "node": "^16.x"
+  },
   "jest": {
     "moduleFileExtensions": [
       "js",
