--- a/auth-with-nest/package.json
+++ b/auth-with-nest/package.json
@@ -25,11 +25,14 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/mongoose": "^9.2.0",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.0.1",
     "mongoose": "^6.5.2",
+    "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
